make the sticky nav, once again, have top: -1px. Sometimes there is a 1px gap, sometimes there is not, but this will ensure that it is never there

--- a/tumblr/tumblr-general.css
+++ b/tumblr/tumblr-general.css
@@ -127,7 +127,7 @@ body, html {
   position: relative;
   position: -webkit-sticky;
   position: sticky;
-  top: 0px;
+  top: -1px;
   z-index: 1;
   margin: 0px;
 }
